--- a/community/kernel/src/docs/ops/configuration.asciidoc
+++ b/community/kernel/src/docs/ops/configuration.asciidoc
@@ -2,7 +2,7 @@
 = Configuration Settings Reference
 
 On this page you'll find the main configuration settings you can use with Neo4j.
-They can be set in the _conf/neo4j.properties_ file when using the Neo4j Server (see <<server-configuration>>).
+They can be set in the _conf/neo4j.conf_ file when using the Neo4j Server (see <<server-configuration>>).
 If you use the embedded database, you can pass them in as a map (see <<tutorials-java-embedded-setup-config>>).
 
 For additional configuration settings, see:
