--- a/community/kernel/src/docs/ops/performance-guide.asciidoc
+++ b/community/kernel/src/docs/ops/performance-guide.asciidoc
@@ -31,7 +31,7 @@ We find that `-XX:+UseG1GC` works well in most use cases.
 
 The next thing to look at, is the file caching memory.
 Neo4j uses its own page cache for the store files, and relies on the operating system for caching the index files.
-Make sure that the `dbms.pagecache.memory` setting (in _neo4j.properties_) is large enough to fit the entire store, if possible.
+Make sure that the `dbms.pagecache.memory` setting (in _neo4j.conf_) is large enough to fit the entire store, if possible.
 But also make sure that you are not allocating so much memory to the JVM and the Neo4j page cache, that there is no memory left for the operating system to cache the Lucene index files.
 For more information on configuration see <<configuration>>.
 
