--- a/community/server/README.asciidoc
+++ b/community/server/README.asciidoc
@@ -16,8 +16,7 @@ Run the server using:
 
  mvn exec:java
 
-If this fails, ensure you are not missing _conf/neo4j.properties_
-with a line containing `org.neo4j.server.database.location=<path-to-database-files>`.
+If this fails, ensure you are not missing _conf/neo4j.conf_ with a line containing `org.neo4j.server.database.location=<path-to-database-files>`.
 This may happen if you delete neo4j-home during development to reset the database.
 
 == Webadmin development ==
