--- a/community/udc/src/docs/ops/index.asciidoc
+++ b/community/udc/src/docs/ops/index.asciidoc
@@ -42,7 +42,7 @@ After startup, UDC waits for ten minutes before sending the first ping. It does 
 == How to disable UDC ==
 
 UDC is easily turned off by disabling it in the database configuration.
-In _conf/neo4j.properties_ for Neo4j server or in the configuration passed to the database in embedded mode.
+In _conf/neo4j.conf_ for Neo4j server or in the configuration passed to the database in embedded mode.
 
 include::{importdir}/neo4j-udc-docs-jar/ops/configuration-attributes.asciidoc[]
 
