--- a/enterprise/ha/src/docs/dev/arbiter.asciidoc
+++ b/enterprise/ha/src/docs/dev/arbiter.asciidoc
@@ -9,8 +9,8 @@ Instead, what is called arbiter instances can be deployed.
 They can be regarded as cluster participants in that their role is to take part in master elections with the single purpose of breaking ties in the election process.
 That makes possible a scenario where you have a cluster of 2 Neo4j database instances and an additional arbiter instance and still enjoy tolerance of a single failure of either of the 3 instances.
 
-Arbiter instances are configured in the same way as Neo4j HA members are -- through the _conf/neo4j.properties_ file.
-The instance is configured to be an arbiter by setting the +org.neo4j.server.database.mode+ option in _conf/neo4j.properties_ to +ARBITER+.
+Arbiter instances are configured in the same way as Neo4j HA members are -- through the _conf/neo4j.conf_ file.
+The instance is configured to be an arbiter by setting the +org.neo4j.server.database.mode+ option in _conf/neo4j.conf_ to +ARBITER+.
 Settings that are not cluster specific are of course ignored, so you can easily start up an arbiter instance in place of a properly configured Neo4j instance.
 
 To start the arbiter instance, run +neo4j+ as normal:
