--- a/enterprise/ha/src/docs/dev/config.asciidoc
+++ b/enterprise/ha/src/docs/dev/config.asciidoc
@@ -20,13 +20,13 @@ This means that you can extend the cluster without changing the configuration of
 
 == Server configuration ==
 
-If you are running Neo4j server, specify +org.neo4j.server.database.mode=HA+ in _conf/neo4j.properties_.
+If you are running Neo4j server, specify +org.neo4j.server.database.mode=HA+ in _conf/neo4j.conf_.
 
 include::{importdir}/neo4j-server-enterprise-docs-jar/ops/configuration-attributes.asciidoc[]
 
 == Database configuration ==
 
-HA configuration parameters should be supplied alongside general Neo4j parameters in _conf/neo4j.properties_.
+HA configuration parameters should be supplied alongside general Neo4j parameters in _conf/neo4j.conf_.
 There are many configurable parameters. In most cases it isn't necessary to modify the default values.
 The only parameters that need to be specified are +ha.server_id+ and +ha.initial_hosts+.
 
