--- a/manual/server-examples/src/docs/dev/plugins-extensions-desktop.asciidoc
+++ b/manual/server-examples/src/docs/dev/plugins-extensions-desktop.asciidoc
@@ -8,6 +8,5 @@ classpath, but please note that nested directories for plugins are currently
 not supported.
 
 Otherwise server plugins and extensions are subject to the same rules as usual.
-Please note when configuring server extensions that _neo4j.properties_
-for Neo4j Desktop lives in '%APPDATA%\Neo4j Community'.
+Please note when configuring server extensions that _neo4j.conf_ for Neo4j Desktop lives in '%APPDATA%\Neo4j Community'.
 
