--- a/manual/cypher/cypher-docs/src/docs/dev/ql/functions/index.asciidoc
+++ b/manual/cypher/cypher-docs/src/docs/dev/ql/functions/index.asciidoc
@@ -38,10 +38,10 @@ include::exists.asciidoc[]
 Scalar functions return a single value.
 
 [IMPORTANT]
-The `LENGTH` and `SIZE` functions are quite similar, and so it is important to take note of the difference.
-Due to backwards compatibility `LENGTH` currently works on four types: strings, paths, collections and pattern expressions.
-However, for clarity it is recommended to only use `LENGTH` on strings and paths, and use the new `SIZE` function
-on collections and pattern expressions. `LENGTH` on those types may be deprecated in future.
+The `length()` and `size()` functions are quite similar, and so it is important to take note of the difference.
+Due to backwards compatibility, `length()` currently works on four types: strings, paths, lists and pattern expressions.
+However, for clarity it is recommended to only use `LENGTH` on strings and paths, and use the new `size()` function on lists and pattern expressions.
+`length()` on those types may be deprecated in future.
 
 .Graph
 include::includes/cypher-functions-graph.asciidoc[]
@@ -78,12 +78,12 @@ include::tofloat.asciidoc[]
 
 :leveloffset: 1
 
-[[query-functions-collection]]
-== Collection functions ==
+[[query-functions-list]]
+== List functions ==
 
-Collection functions return collections of things -- nodes in a path, and so on.
+List functions return lists of things -- nodes in a path, and so on.
 
-See also <<query-operators-collection>>.
+See also <<query-operators-list>>.
 
 .Graph
 include::includes/cypher-functions-graph.asciidoc[]
