--- a/community/udc/src/docs/ops/index.asciidoc
+++ b/community/udc/src/docs/ops/index.asciidoc
@@ -41,8 +41,7 @@ After startup, UDC waits for ten minutes before sending the first ping. It does 
 
 == How to disable UDC ==
 
-UDC is easily turned off by disabling it in the database configuration.
-In _conf/neo4j.conf_ for Neo4j server or in the configuration passed to the database in embedded mode.
+UDC is easily turned off by disabling it in the database configuration, in _neo4j.conf_ for Neo4j server or in the configuration passed to the database in embedded mode.
 
 include::{importdir}/neo4j-udc-docs-jar/ops/configuration-attributes.asciidoc[]
 
