--- a/community/server/src/docs/ops/server-configuration.asciidoc
+++ b/community/server/src/docs/ops/server-configuration.asciidoc
@@ -14,10 +14,16 @@ The main configuration file for Neo4j is <<file-locations, _neo4j.conf_>>.
 This file contains several important settings, and although the defaults are sensible
 administrators might choose to make changes (especially to the port settings).
 
-Set the location on disk of the database directory like this:
+Chose the database to mount like this:
 [source,properties]
 ----
-org.neo4j.server.database.location=data/databases/graph.db
+dbms.active_database=graph.db
+----
+
+The location of the Neo4j's data directory can be customized:
+[source,properties]
+----
+dbms.directories.data=data
 ----
 
 NOTE: On Windows systems, absolute locations including drive letters need to read '"c:/data/db"'.
