--- a/manual/server-examples/src/docs/dev/index.asciidoc
+++ b/manual/server-examples/src/docs/dev/index.asciidoc
@@ -12,9 +12,8 @@ When running your own code alongside Neo4j in the same JVM, there are a few thin
   Large caches are particularly good at promoting many objects to the old generation, thus increasing the need for expensive full garbage collections.
 * Don't use internal Neo4j APIs.
   They may change in future releases, and they might not always work as intended in the context of your code.
-* Don't use Java object serialization or reflection if you can avoid it.
+* Don't use Java object serialization or reflection in your code, or in any runtime dependency you use, if you can avoid it.
   If you can't, make sure that the `-XX:+TrustFinalNonStaticFields` JVM flag is disabled in `neo4j-wrapper.conf`.
-  This also applies to any runtime dependencies your code may have.
 ====
 
 :leveloffset: 2
