--- a/community/bolt/src/docs/dev/examples.asciidoc
+++ b/community/bolt/src/docs/dev/examples.asciidoc
@@ -16,9 +16,13 @@ Client: 60 60 B0 17
 Client: 00 00 00 01  00 00 00 00  00 00 00 00  00 00 00 00
 Server: 00 00 00 01
 
-Client: INIT "MyClient/1.0"
+Client: INIT "MyClient/1.0" { "scheme": "basic", "principal": "neo4j", "credentials": "secret"}
 
-  00 0F B1 01 8C 4D 79 43    6C 69 65 6E 74 2F 31 2E    30 00 00
+  00 40 B1 01  8C 4D 79 43  6C 69 65 6E  74 2F 31 2E
+  30 A3 86 73  63 68 65 6D  65 85 62 61  73 69 63 89
+  70 72 69 6E  63 69 70 61  6C 85 6E 65  6F 34 6A 8B
+  63 72 65 64  65 6E 74 69  61 6C 73 86  73 65 63 72
+  65 74 00 00
 
 Server: SUCCESS {}
 
@@ -64,9 +68,13 @@ Client: 60 60 B0 17
 Client: 00 00 00 01  00 00 00 00  00 00 00 00  00 00 00 00
 Server: 00 00 00 01
 
-Client: INIT "MyClient/1.0"
+Client: INIT "MyClient/1.0" { "scheme": "basic", "principal": "neo4j", "credentials": "secret"}
 
-  00 0F B1 01 8C 4D 79 43    6C 69 65 6E 74 2F 31 2E    30 00 00
+  00 40 B1 01  8C 4D 79 43  6C 69 65 6E  74 2F 31 2E
+  30 A3 86 73  63 68 65 6D  65 85 62 61  73 69 63 89
+  70 72 69 6E  63 69 70 61  6C 85 6E 65  6F 34 6A 8B
+  63 72 65 64  65 6E 74 69  61 6C 73 86  73 65 63 72
+  65 74 00 00
 
 Server: SUCCESS {}
 
@@ -133,9 +141,13 @@ Client: 60 60 B0 17
 Client: 00 00 00 01  00 00 00 00  00 00 00 00  00 00 00 00
 Server: 00 00 00 01
 
-Client: INIT "MyClient/1.0"
+Client: INIT "MyClient/1.0" { "scheme": "basic", "principal": "neo4j", "credentials": "secret"}
 
-  00 0F B1 01 8C 4D 79 43    6C 69 65 6E 74 2F 31 2E    30 00 00
+  00 40 B1 01  8C 4D 79 43  6C 69 65 6E  74 2F 31 2E
+  30 A3 86 73  63 68 65 6D  65 85 62 61  73 69 63 89
+  70 72 69 6E  63 69 70 61  6C 85 6E 65  6F 34 6A 8B
+  63 72 65 64  65 6E 74 69  61 6C 73 86  73 65 63 72
+  65 74 00 00
 
 Server: SUCCESS {}
 
@@ -214,9 +226,13 @@ Client: 60 60 B0 17
 Client: 00 00 00 01  00 00 00 00  00 00 00 00  00 00 00 00
 Server: 00 00 00 01
 
-Client: INIT "MyClient/1.0"
+Client: INIT "MyClient/1.0" { "scheme": "basic", "principal": "neo4j", "credentials": "secret"}
 
-  00 0F B1 01 8C 4D 79 43    6C 69 65 6E 74 2F 31 2E    30 00 00
+  00 40 B1 01  8C 4D 79 43  6C 69 65 6E  74 2F 31 2E
+  30 A3 86 73  63 68 65 6D  65 85 62 61  73 69 63 89
+  70 72 69 6E  63 69 70 61  6C 85 6E 65  6F 34 6A 8B
+  63 72 65 64  65 6E 74 69  61 6C 73 86  73 65 63 72
+  65 74 00 00
 
 Server: SUCCESS {}
 
@@ -287,9 +303,13 @@ Client: 60 60 B0 17
 Client: 00 00 00 01  00 00 00 00  00 00 00 00  00 00 00 00
 Server: 00 00 00 01
 
-Client: INIT "MyClient/1.0"
+Client: INIT "MyClient/1.0" { "scheme": "basic", "principal": "neo4j", "credentials": "secret"}
 
-  00 0F B1 01 8C 4D 79 43    6C 69 65 6E 74 2F 31 2E    30 00 00
+  00 40 B1 01  8C 4D 79 43  6C 69 65 6E  74 2F 31 2E
+  30 A3 86 73  63 68 65 6D  65 85 62 61  73 69 63 89
+  70 72 69 6E  63 69 70 61  6C 85 6E 65  6F 34 6A 8B
+  63 72 65 64  65 6E 74 69  61 6C 73 86  73 65 63 72
+  65 74 00 00
 
 Server: SUCCESS {}
 
@@ -454,9 +474,13 @@ Client: 60 60 B0 17
 Client: 00 00 00 01  00 00 00 00  00 00 00 00  00 00 00 00
 Server: 00 00 00 01
 
-Client: INIT "MyClient/1.0"
+Client: INIT "MyClient/1.0" { "scheme": "basic", "principal": "neo4j", "credentials": "secret"}
 
-  00 0F B1 01 8C 4D 79 43    6C 69 65 6E 74 2F 31 2E    30 00 00
+  00 40 B1 01  8C 4D 79 43  6C 69 65 6E  74 2F 31 2E
+  30 A3 86 73  63 68 65 6D  65 85 62 61  73 69 63 89
+  70 72 69 6E  63 69 70 61  6C 85 6E 65  6F 34 6A 8B
+  63 72 65 64  65 6E 74 69  61 6C 73 86  73 65 63 72
+  65 74 00 00
 
 Server: SUCCESS {}
 
@@ -600,9 +624,13 @@ Client: 60 60 B0 17
 Client: 00 00 00 01  00 00 00 00  00 00 00 00  00 00 00 00
 Server: 00 00 00 01
 
-Client: INIT "MyClient/1.0"
+Client: INIT "MyClient/1.0" { "scheme": "basic", "principal": "neo4j", "credentials": "secret"}
 
-  00 0F B1 01 8C 4D 79 43    6C 69 65 6E 74 2F 31 2E    30 00 00
+  00 40 B1 01  8C 4D 79 43  6C 69 65 6E  74 2F 31 2E
+  30 A3 86 73  63 68 65 6D  65 85 62 61  73 69 63 89
+  70 72 69 6E  63 69 70 61  6C 85 6E 65  6F 34 6A 8B
+  63 72 65 64  65 6E 74 69  61 6C 73 86  73 65 63 72
+  65 74 00 00
 
 Server: SUCCESS {}
 
